# jaxego

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CORRECOES.md  DISCOVERY-REPORT.md  FRAMEWORK-STATUS.md  GERADOR-DE-DOCUMENTACAO.md  GUIA-DESCOBERTA-NOVO-PROJETO.md  GUIA-GERACAO-DE-APLICACAO.md  GUIA-PROJETO-LEGADO.md  GUIA-PROJETO-NOVO.md  INSTALLATION.md  MIGRACAO-v0.9.4-para-v0.9.5.md  MIGRACAO-v0.9.5-para-v0.9.6.md  PERMISSIONS.md  README.md  TELEMETRY-SCHEMA.json  TUTORIAL-COMPLETO.md  backup-pre-0045-20260710-161909.sql  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_core_auth_multiarea.py  0003_merchants_plans.py  0004_couriers_kyc.py  0005_area_operable.py  0006_deliveries.py  0007_dispatch_favorites_blocks.py  0008_proofs_tracking_notif.py  0008_proofs_tracking_notifications.py  0009_safe2pay_billing_escrow.py  0010_public_api_webhooks.py  0011_governance_score_ratings.py  0012_ai_usage_log.py  0013_financeiro_back_office.py  0014_delivery_package.py  0015_merchant_address.py  0016_courier_collection_method.py  0017_receipt_method.py  0018_drop_score_tables.py  0019_merchant_address_number_neighborhood.py  0020_area_boundary.py  0021_teams.py  0022_courier_team_id.py  0023_delivery_team_id.py  0024_delivery_team_ids_json.py  0025_delivery_price_cents.py  0026_drop_estimate_columns.py  0027_team_fields.py  0028_delivery_image_key.py  0029_drop_neighborhood_polygon.py  0030_scheduled_delivery.py  0031_zona_table.py  0032_team_zona.py  0033_courier_zona.py  0034_delivery_zona_id.py  0035_delivery_dropoff_reference.py  0036_courier_zona_ativo.py  0037_merchant_address_zip_city_state.py  0038_plan_price_monthly_annual.py  0039_courier_online_until.py  (+10 more)
apps/api/app/: __init__.py  dev_upload.py  main.py
apps/api/app/ai/: __init__.py  claude.py  factory.py  (+4 more)
apps/api/tests/: conftest.py  fixtures_public_api.py  helpers.py  test_area_isolation.py  test_audit_append_only.py  test_auth_flow.py  test_auth_lockout.py  test_health.py  test_jwt.py  test_naive_datetime_guard.py  test_rbac_matrix.py  test_security_argon2.py  test_sentry.py  test_totp.py  test_worker_settings.py
apps/api/tools/: check_naive_datetime.py  gen_secrets.py  seed.py
(+1522 files in other folders)
